--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Fiction'
+- GITenberg
 tableOfContents: Narcis -- Verhaaltje -- Huishouden -- Van een juffrouw -- Poes --
   De Mof -- Tante Riek -- Nacht -- Bartje -- Binnenhuis-ideaal -- Droom -- Grootmoedertje
   -- Proletariërs -- Prinses Colibri -- Bloemen -- Meissie -- Warrem -- Fondant --
